// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loader should work for a nested property for a global object: errors 1`] = `Array []`;

exports[`loader should work for a nested property for a global object: module 1`] = `
"var ___EXPOSE_LOADER_IMPORT___ = require(\\"-!./global-commonjs2-single-export.js\\");
var ___EXPOSE_LOADER_GET_GLOBAL_THIS___ = require(\\"../../src/runtime/getGlobalThis.js\\");
var ___EXPOSE_LOADER_GLOBAL_THIS___ = ___EXPOSE_LOADER_GET_GLOBAL_THIS___();
if (!___EXPOSE_LOADER_GLOBAL_THIS___[\\"myGlobal\\"]) ___EXPOSE_LOADER_GLOBAL_THIS___[\\"myGlobal\\"] = {};
___EXPOSE_LOADER_GLOBAL_THIS___[\\"myGlobal\\"][\\"nested\\"] = ___EXPOSE_LOADER_IMPORT___;
module.exports = ___EXPOSE_LOADER_IMPORT___;"
`;

exports[`loader should work for a nested property for a global object: result 1`] = `
Object {
  "ExposeLoader": Object {
    "foo": "bar",
  },
  "myGlobal": Object {
    "foo": "bar",
    "nested": Object {
      "foo": "bar",
    },
  },
  "myOtherGlobal": Object {
    "foo": "bar",
    "nested": Object {
      "foo": "bar",
    },
  },
}
`;

exports[`loader should work for a nested property for a global object: warnings 1`] = `Array []`;

exports[`loader should work for nested preporties for a global object: errors 1`] = `Array []`;

exports[`loader should work for nested preporties for a global object: module 1`] = `
"var ___EXPOSE_LOADER_IMPORT___ = require(\\"-!./global-commonjs2-single-export.js\\");
var ___EXPOSE_LOADER_GET_GLOBAL_THIS___ = require(\\"../../src/runtime/getGlobalThis.js\\");
var ___EXPOSE_LOADER_GLOBAL_THIS___ = ___EXPOSE_LOADER_GET_GLOBAL_THIS___();
if (!___EXPOSE_LOADER_GLOBAL_THIS___[\\"myGlobal\\"]) ___EXPOSE_LOADER_GLOBAL_THIS___[\\"myGlobal\\"] = {};
___EXPOSE_LOADER_GLOBAL_THIS___[\\"myGlobal\\"][\\"nested\\"] = ___EXPOSE_LOADER_IMPORT___;
if (!___EXPOSE_LOADER_GLOBAL_THIS___[\\"myOtherGlobal\\"]) ___EXPOSE_LOADER_GLOBAL_THIS___[\\"myOtherGlobal\\"] = {};
___EXPOSE_LOADER_GLOBAL_THIS___[\\"myOtherGlobal\\"][\\"nested\\"] = ___EXPOSE_LOADER_IMPORT___;
module.exports = ___EXPOSE_LOADER_IMPORT___;"
`;

exports[`loader should work for nested preporties for a global object: result 1`] = `
Object {
  "ExposeLoader": Object {
    "foo": "bar",
  },
  "myGlobal": Object {
    "foo": "bar",
    "nested": Object {
      "foo": "bar",
    },
  },
  "myOtherGlobal": Object {
    "foo": "bar",
    "nested": Object {
      "foo": "bar",
    },
  },
}
`;

exports[`loader should work for nested preporties for a global object: warnings 1`] = `Array []`;

exports[`loader should work with multiple exposes: errors 1`] = `Array []`;

exports[`loader should work with multiple exposes: module 1`] = `
"var ___EXPOSE_LOADER_IMPORT___ = require(\\"-!./global-commonjs2-single-export.js\\");
var ___EXPOSE_LOADER_GET_GLOBAL_THIS___ = require(\\"../../src/runtime/getGlobalThis.js\\");
var ___EXPOSE_LOADER_GLOBAL_THIS___ = ___EXPOSE_LOADER_GET_GLOBAL_THIS___();
___EXPOSE_LOADER_GLOBAL_THIS___[\\"myGlobal\\"] = ___EXPOSE_LOADER_IMPORT___;
___EXPOSE_LOADER_GLOBAL_THIS___[\\"myOtherGlobal\\"] = ___EXPOSE_LOADER_IMPORT___;
module.exports = ___EXPOSE_LOADER_IMPORT___;"
`;

exports[`loader should work with multiple exposes: result 1`] = `
Object {
  "ExposeLoader": Object {
    "foo": "bar",
  },
  "myGlobal": Object {
    "foo": "bar",
  },
  "myOtherGlobal": Object {
    "foo": "bar",
  },
}
`;

exports[`loader should work with multiple exposes: warnings 1`] = `Array []`;

exports[`loader should work with sourceMap: errors 1`] = `Array []`;

exports[`loader should work with sourceMap: sourceMap 1`] = `"data:application/json;charset=utf-8;base64, - map normalized for test"`;

exports[`loader should work with sourceMap: warnings 1`] = `Array []`;

exports[`loader should work: errors 1`] = `Array []`;

exports[`loader should work: module 1`] = `
"var ___EXPOSE_LOADER_IMPORT___ = require(\\"-!./global-commonjs2-single-export.js\\");
var ___EXPOSE_LOADER_GET_GLOBAL_THIS___ = require(\\"../../src/runtime/getGlobalThis.js\\");
var ___EXPOSE_LOADER_GLOBAL_THIS___ = ___EXPOSE_LOADER_GET_GLOBAL_THIS___();
___EXPOSE_LOADER_GLOBAL_THIS___[\\"myGlobal\\"] = ___EXPOSE_LOADER_IMPORT___;
module.exports = ___EXPOSE_LOADER_IMPORT___;"
`;

exports[`loader should work: result 1`] = `
Object {
  "ExposeLoader": Object {
    "foo": "bar",
  },
  "myGlobal": Object {
    "foo": "bar",
  },
}
`;

exports[`loader should work: warnings 1`] = `Array []`;
